# playground

./: .gitignore  README.md  go.mod  go.work  go.work.sum
.devcontainer/: devcontainer.json
.github/workflows/: service1-release.yaml  service1.yaml  service2.yaml  service3.yaml  services.yaml
.github/workloads/: service1.yaml
advent-of-code-24/: Makefile  day1.go  day2.go  day3.go  go.mod
advent-of-code-24/cmd/: main.go
advent-of-code-24/day1/: main.go
advent-of-code-24/day2/: main.go
advent-of-code-24/day3/: main.go
argos/: project.md
argos/vision/: .gitignore  Makefile  README.md  pyproject.toml
argos/vision/argos_vision/: __init__.py  camera.py  cli.py  database.py  datasets.py  face.py
argos/vision/tests/: test_database.py  test_face.py
cs224N/: README.md  exploring_word_vectors.ipynb
etl_dejt/: approved_filter.py  dedup.py  pyproject.toml
etl_dejt/clean/: Diario_3639__11_1_2023.pdf_clean.json  entire_table_clean.json
etl_dejt/data/: Diario_3639__11_1_2023.pdf_output.txt  Diario_3640__12_1_2023.pdf_output.txt  Diario_3641__13_1_2023.pdf_output.txt
etl_dejt/src/: extraction.py
golang/: go.mod  go.sum  semaphore.go  slug.go
golang/.devcontainer/: Dockerfile  devcontainer.json
golang/1.22/: go.mod  main.go  main_test.go
golang/api/: main.go  mutex.go
golang/api_test/: README.md  go.mod  main.go  main_test.go
golang/authentication/: go.mod  go.sum  main.go
golang/cipher/: ctr.go
golang/concurrency/: main.go
golang/context/: cancel.go
keda-nats-validation/: README.md  kind-config.yaml
label-studio/: README.md  values.yaml
leetcode/: 1-twosum.go  100-sametree.go  1189-ballon.go  1207-unique-number-of-occurrences.go  121-best-time-to-buy.go  1365-how-many-numbers-are-smaller-than-the-current.go  1370-increasing-decreasing-string.go  1394-luck-integer.go  1431.go  1436-destination-city.go  1496-path-crossing.go  151-reverse-words-in-a-string.go  1512-number-of-good.go  1652-defuse-the-bomb.go  1672-richest-custumer.go  169-majority-element.go  1748-sum-of-unique-elements.go  1768.go  1876-substrings-of-size.go  189-rotate.go  1929-concatenation-array.go  2006-count-numbers-of-pairs-with-absolute-diff-k.go  202-happy-number.go  205-isomorphic-strings.go  217.go  219-contains-duplicate-2.go  2325-decode-the-message.go  2379-minumum-recolors.go  238-product-of-array-except-self.go  242-validanagram.go  26-remove-duplicates-from-sorted-array.go  27-remove-element.go  28-find-the-index-of-the-first-occurence.go  290-word-pattern.go  2932.go  345.go  347-top-k-frequent-elements.go  383-ransom-note.go  58-lenght-of-last-word.go  605.go  (+7 more)
nats/: README.md  multi-stream-validation.md  naming-convetion.md  nats-values.yaml
ocr/: README.md  entity_extraction.py  mount_table.py  print_intervals.py  pyproject.toml  regex.py  table_extraction.py
ocr/data/: processed.json  processed_table.json  root_output.txt  sample3.txt  test.json  trash.json
otel-45150/: README.md  docker-compose.yml  otel-collector-config.yaml  prometheus.yml
prometheus/: README.md  docker-compose.yaml  prometheus.yml  pyproject.toml  server.py
python/: pydantic_mock.py  pyproject.toml  requirements.txt
python/aiohttp-test/: Makefile  pyproject.toml  xaiohttp.py
python/aiohttp-test/tests/: test_xaiohttp.py
python/async-mock/: Makefile  main.py  pyproject.toml
python/async-mock/test/: test_main.py
python/cloud-build-integration-test/services/service1/: Dockerfile  Dockerfile.dev  Makefile  README.md  compose.yaml  main.py  pyproject.toml  requirements.txt
python/cloud-build-integration-test/services/service1/tests/integration/: main_test.py
python/contextvar/: app.py  factory.py
python/copy&reference/: main.py
python/dataparse/: flowtrack.json  main.py
python/exception/: application_exception.py
python/fastapi-elk-async/: Makefile  docker-compose.yaml  main.py
python/fastapi_elk_async/: Makefile  README.md  apicall.py  conftest.py  load_test.js  main.py  test_main.py
python/gcp/: request_token_id.py
python/gcp-secrect-manager/: main.py  pyproject.toml
python/gotchas/: main.py
python/log_lib/: README.md  exception.py  logging_std.py  loguru_lib.py  python-json-logger.py  sctructlog.py
python/maporder/: main.py
python/matplotlib/: histogram.py
python/ml/: Logistic Type I Model (1).pickle  entrypoint.py  main.py  requirements.txt
python/ml/models/: misc.pickle
python/ml/postgres/: customers.py
python/ml/tests/: test_customers.py
python/openserach/: response_exception.py
python/pickle-transformer/: Makefile  main.py  pyproject.toml  requirements.txt
python/pickle-transformer/model/: transformer.py
python/pydantic_mock/: pyproject.toml
python/regex/: match.py  remove_number.py  sub.py
python/regression/: go.mod  reg.go  reg.py
python/rufftest/: Makefile  pyproject.toml  ruff.toml
python/rufftest/src/: clearsale.py
python/rufftest/src/tests/: test_clearsale.py
python/services-example/libgeneric1/: Makefile  README.md  pyproject.toml
python/services-example/service1/: Makefile  mypy.ini  pyproject.toml
python/services-example/service1/src/: main.py
python/services-example/service1/tests/: test_main.py
python/services-example/service1/tests/integration/: test_integration_main.py
python/services-example/service2/: .gitignore
python/services-example/service2/src/: main.py
python/services-example/service3/: Makefile  README.md  main.py  pyproject.toml
python/trace/: app.py  curl_request.sh
repro-batch-400/: README.md  debug-requests-dev.sh  debug-requests.sh  docker-compose-dev-large-batch.yml  docker-compose-go-bench.yml  docker-compose-large-batch-sizer.yml  docker-compose-large-batch.yml  docker-compose-small-batch-sizer.yml  docker-compose-small-batch.yml  logs-ngix.json  otel-collector-config-dev-large-batch.yaml  otel-collector-config-go-bench.yaml  otel-collector-config-large-batch-sizer.yaml  otel-collector-config-large-batch.yaml  otel-collector-config-small-batch-sizer.yaml  otel-collector-config-small-batch.yaml  payload-sizer.py
rustp/: .gitignore  Cargo.toml  hello.rs
(+211 files in other folders)
