[tool.poetry]
name = "etl-dejt"
version = "0.1.0"
description = ""
authors = ["Jojo <jonathan.silva@birdie.ai>"]
readme = "README.md"
packages = [{include = "etl_dejt"}]

[tool.poetry.dependencies]
python = "^3.10"
pymupdf = "^1.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
