[tool.poetry]
name = "aiohttp-test"
version = "0.1.0"
description = ""
authors = ["perebaj <perebaj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.5"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
aiohttp = "^3.10.10"
asynctest = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
