[tool.poetry]
name = "pickle-transfomer"
version = "0.1.0"
description = "test unpickle files"
authors = ["perebaj <perebaj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
optbinning = "^0.19.0"
scikit-learn = "^1.5.1"
pydantic = "^2.9.0"
modal = "^0.64.90"
fastapi = {extras = ["standard"], version = "^0.114.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
