[tool.poetry]
name = "libgeneric1"
version = "0.4.0"
description = ""
authors = ["perebaj <perebaj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.13"


[[tool.poetry.source]]
name = "gcp"
url = "https://us-central1-python.pkg.dev/blup-432616/libtest"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
