[tool.poetry]
name = "service1"
version = "0.1.0"
description = ""
authors = ["perebaj <perebaj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "^7.1.1"
black = "^24.8.0"
isort = "^5.13.2"
pytest = "^8.3.3"
mypy = "^1.11.2"
testcontainers = {extras = ["postgres"], version = "^4.8.1"}
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.35"


[[tool.poetry.source]]
name = "gcp"
url = "https://us-python.pkg.dev/truepay-tools/python/simple"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 120

[tool.black]
line-length = 120
