[tool.poetry]
name = "service3"
version = "0.1.0"
description = ""
authors = ["perebaj <perebaj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.13"
isort = "^5.13.2"
flake8 = "^7.1.1"
tino-flow-consumer = {version = "0.137.0", source = "gcp"}


[[tool.poetry.source]]
name = "gcp"
url = "https://us-python.pkg.dev/truepay-tools/python/simple"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
