[tool.poetry]
name = "service1"
version = "0.1.0"
description = ""
authors = ["perebaj <perebaj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["standard"], version = "^0.115.0"}
pytest = "^8.3.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
